@@ -1,6 +1,11 @@
 devel
 -----
 
+* Fix BTS-2220: Fix failing autoupgrade of databases in cluster mode.
+  This was caused by key generation now using the cluster key
+  generator on dbservers, which fails during upgrade with a message that
+  the database was shutting down.
+
 * Fix BTS-2219: Fix possible crashes with the log id [80e0e] and corresponding
   message
   "thread '<thread name>' is not stopped but created. shutting down hard".
